--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -4202,13 +4202,13 @@
                         </h1>
                         <div style="margin-top: 28px; margin-bottom: 24px">
                           <div
-                            class="_1mx6kqf"
+                            class="card__media"
                             style="
                               background: rgb(72, 72, 72);
                               --dls-basecard-padding-top: 66.6667%;
                             "
                           >
-                            <div class="_1szwzht">
+                            <div class="card__media-container">
                               <div
                                 class="_5u0r7"
                                 style="
