--- a/covidsafety.html
+++ b/covidsafety.html
@@ -148,7 +148,7 @@
                                                   --dls-basecard-padding-top: 56.25%;
                                                 "
                                               >
-                                                <div class="_1szwzht">
+                                                <div class="card__media-container">
                                                   <div
                                                     class="_v0gz4uz"
                                                     style="
@@ -229,7 +229,7 @@
                                                   --dls-basecard-padding-top: 56.25%;
                                                 "
                                               >
-                                                <div class="_1szwzht">
+                                                <div class="card__media-container">
                                                   <div
                                                     class="_v0gz4uz"
                                                     style="
@@ -329,7 +329,7 @@
                                                   --dls-basecard-padding-top: 56.25%;
                                                 "
                                               >
-                                                <div class="_1szwzht">
+                                                <div class="card__media-container">
                                                   <div
                                                     class="_v0gz4uz"
                                                     style="
@@ -409,7 +409,7 @@
                                                   --dls-basecard-padding-top: 56.25%;
                                                 "
                                               >
-                                                <div class="_1szwzht">
+                                                <div class="card__media-container">
                                                   <div
                                                     class="_v0gz4uz"
                                                     style="
