--- a/places.html
+++ b/places.html
@@ -1877,13 +1877,13 @@
                                           >
                                             <div class="_e296pg">
                                               <div
-                                                class="_1mx6kqf"
+                                                class="card__media"
                                                 style="
                                                   background: var(--d-nc-lt-s);
                                                   --dls-basecard-padding-top: 66.6667%;
                                                 "
                                               >
-                                                <div class="_1szwzht">
+                                                <div class="card__media-container">
                                                   <span>
                                                     <div class="_ttw0d">
                                                       <a
@@ -2592,13 +2592,13 @@
                                           >
                                             <div class="_e296pg">
                                               <div
-                                                class="_1mx6kqf"
+                                                class="card__media"
                                                 style="
                                                   background: var(--d-nc-lt-s);
                                                   --dls-basecard-padding-top: 66.6667%;
                                                 "
                                               >
-                                                <div class="_1szwzht">
+                                                <div class="card__media-container">
                                                   <span>
                                                     <div class="_ttw0d">
                                                       <a
@@ -3304,13 +3304,13 @@
                                           >
                                             <div class="_e296pg">
                                               <div
-                                                class="_1mx6kqf"
+                                                class="card__media"
                                                 style="
                                                   background: var(--d-nc-lt-s);
                                                   --dls-basecard-padding-top: 66.6667%;
                                                 "
                                               >
-                                                <div class="_1szwzht">
+                                                <div class="card__media-container">
                                                   <span>
                                                     <div class="_ttw0d">
                                                       <a
@@ -4016,13 +4016,13 @@
                                           >
                                             <div class="_e296pg">
                                               <div
-                                                class="_1mx6kqf"
+                                                class="card__media"
                                                 style="
                                                   background: var(--d-nc-lt-s);
                                                   --dls-basecard-padding-top: 66.6667%;
                                                 "
                                               >
-                                                <div class="_1szwzht">
+                                                <div class="card__media-container">
                                                   <span>
                                                     <div class="_ttw0d">
                                                       <a
@@ -4728,13 +4728,13 @@
                                           >
                                             <div class="_e296pg">
                                               <div
-                                                class="_1mx6kqf"
+                                                class="card__media"
                                                 style="
                                                   background: var(--d-nc-lt-s);
                                                   --dls-basecard-padding-top: 66.6667%;
                                                 "
                                               >
-                                                <div class="_1szwzht">
+                                                <div class="card__media-container">
                                                   <span>
                                                     <div class="_ttw0d">
                                                       <a
@@ -5432,13 +5432,13 @@
                                           >
                                             <div class="_e296pg">
                                               <div
-                                                class="_1mx6kqf"
+                                                class="card__media"
                                                 style="
                                                   background: var(--d-nc-lt-s);
                                                   --dls-basecard-padding-top: 66.6667%;
                                                 "
                                               >
-                                                <div class="_1szwzht">
+                                                <div class="card__media-container">
                                                   <span>
                                                     <div class="_ttw0d">
                                                       <a
@@ -6146,13 +6146,13 @@
                                           >
                                             <div class="_e296pg">
                                               <div
-                                                class="_1mx6kqf"
+                                                class="card__media"
                                                 style="
                                                   background: var(--d-nc-lt-s);
                                                   --dls-basecard-padding-top: 66.6667%;
                                                 "
                                               >
-                                                <div class="_1szwzht">
+                                                <div class="card__media-container">
                                                   <span>
                                                     <div class="_ttw0d">
                                                       <a
@@ -6858,13 +6858,13 @@
                                           >
                                             <div class="_e296pg">
                                               <div
-                                                class="_1mx6kqf"
+                                                class="card__media"
                                                 style="
                                                   background: var(--d-nc-lt-s);
                                                   --dls-basecard-padding-top: 66.6667%;
                                                 "
                                               >
-                                                <div class="_1szwzht">
+                                                <div class="card__media-container">
                                                   <span>
                                                     <div class="_ttw0d">
                                                       <a
@@ -7490,13 +7490,13 @@
                                           >
                                             <div class="_e296pg">
                                               <div
-                                                class="_1mx6kqf"
+                                                class="card__media"
                                                 style="
                                                   background: var(--d-nc-lt-s);
                                                   --dls-basecard-padding-top: 66.6667%;
                                                 "
                                               >
-                                                <div class="_1szwzht">
+                                                <div class="card__media-container">
                                                   <span>
                                                     <div class="_ttw0d">
                                                       <a
@@ -8122,13 +8122,13 @@
                                           >
                                             <div class="_e296pg">
                                               <div
-                                                class="_1mx6kqf"
+                                                class="card__media"
                                                 style="
                                                   background: var(--d-nc-lt-s);
                                                   --dls-basecard-padding-top: 66.6667%;
                                                 "
                                               >
-                                                <div class="_1szwzht">
+                                                <div class="card__media-container">
                                                   <span>
                                                     <div class="_ttw0d">
                                                       <a
@@ -8835,13 +8835,13 @@
                                           >
                                             <div class="_e296pg">
                                               <div
-                                                class="_1mx6kqf"
+                                                class="card__media"
                                                 style="
                                                   background: var(--d-nc-lt-s);
                                                   --dls-basecard-padding-top: 66.6667%;
                                                 "
                                               >
-                                                <div class="_1szwzht">
+                                                <div class="card__media-container">
                                                   <span>
                                                     <div class="_ttw0d">
                                                       <a
@@ -9548,13 +9548,13 @@
                                           >
                                             <div class="_e296pg">
                                               <div
-                                                class="_1mx6kqf"
+                                                class="card__media"
                                                 style="
                                                   background: var(--d-nc-lt-s);
                                                   --dls-basecard-padding-top: 66.6667%;
                                                 "
                                               >
-                                                <div class="_1szwzht">
+                                                <div class="card__media-container">
                                                   <span>
                                                     <div class="_ttw0d">
                                                       <a
@@ -10260,13 +10260,13 @@
                                           >
                                             <div class="_e296pg">
                                               <div
-                                                class="_1mx6kqf"
+                                                class="card__media"
                                                 style="
                                                   background: var(--d-nc-lt-s);
                                                   --dls-basecard-padding-top: 66.6667%;
                                                 "
                                               >
-                                                <div class="_1szwzht">
+                                                <div class="card__media-container">
                                                   <span>
                                                     <div class="_ttw0d">
                                                       <a
@@ -10972,13 +10972,13 @@
                                           >
                                             <div class="_e296pg">
                                               <div
-                                                class="_1mx6kqf"
+                                                class="card__media"
                                                 style="
                                                   background: var(--d-nc-lt-s);
                                                   --dls-basecard-padding-top: 66.6667%;
                                                 "
                                               >
-                                                <div class="_1szwzht">
+                                                <div class="card__media-container">
                                                   <span>
                                                     <div class="_ttw0d">
                                                       <a
@@ -11684,13 +11684,13 @@
                                           >
                                             <div class="_e296pg">
                                               <div
-                                                class="_1mx6kqf"
+                                                class="card__media"
                                                 style="
                                                   background: var(--d-nc-lt-s);
                                                   --dls-basecard-padding-top: 66.6667%;
                                                 "
                                               >
-                                                <div class="_1szwzht">
+                                                <div class="card__media-container">
                                                   <span>
                                                     <div class="_ttw0d">
                                                       <a
@@ -12390,13 +12390,13 @@
                                           >
                                             <div class="_e296pg">
                                               <div
-                                                class="_1mx6kqf"
+                                                class="card__media"
                                                 style="
                                                   background: var(--d-nc-lt-s);
                                                   --dls-basecard-padding-top: 66.6667%;
                                                 "
                                               >
-                                                <div class="_1szwzht">
+                                                <div class="card__media-container">
                                                   <span>
                                                     <div class="_ttw0d">
                                                       <a
@@ -13174,7 +13174,7 @@
                                                       --dls-basecard-padding-top: 100%;
                                                     "
                                                   >
-                                                    <div class="_1szwzht">
+                                                    <div class="card__media-container">
                                                       <span>
                                                         <div class="_ttw0d">
                                                           <a
@@ -13421,7 +13421,7 @@
                                                       --dls-basecard-padding-top: 100%;
                                                     "
                                                   >
-                                                    <div class="_1szwzht">
+                                                    <div class="card__media-container">
                                                       <span>
                                                         <div class="_ttw0d">
                                                           <a
@@ -13648,7 +13648,7 @@
                                                       --dls-basecard-padding-top: 100%;
                                                     "
                                                   >
-                                                    <div class="_1szwzht">
+                                                    <div class="card__media-container">
                                                       <span>
                                                         <div class="_ttw0d">
                                                           <a
@@ -13875,7 +13875,7 @@
                                                       --dls-basecard-padding-top: 100%;
                                                     "
                                                   >
-                                                    <div class="_1szwzht">
+                                                    <div class="card__media-container">
                                                       <span>
                                                         <div class="_ttw0d">
                                                           <a
