--- a/wishlist.html
+++ b/wishlist.html
@@ -387,13 +387,13 @@
                                           >
                                             <div class="_e296pg">
                                               <div
-                                                class="_1mx6kqf"
+                                                class="card__media"
                                                 style="
                                                   background: var(--d-nc-lt-s);
                                                   --dls-basecard-padding-top: 66.6667%;
                                                 "
                                               >
-                                                <div class="_1szwzht">
+                                                <div class="card__media-container">
                                                   <span
                                                     ><div class="_ttw0d">
                                                       <a
@@ -1131,13 +1131,13 @@
                                           >
                                             <div class="_e296pg">
                                               <div
-                                                class="_1mx6kqf"
+                                                class="card__media"
                                                 style="
                                                   background: var(--d-nc-lt-s);
                                                   --dls-basecard-padding-top: 66.6667%;
                                                 "
                                               >
-                                                <div class="_1szwzht">
+                                                <div class="card__media-container">
                                                   <span
                                                     ><div class="_ttw0d">
                                                       <a
@@ -1779,13 +1779,13 @@
                                           >
                                             <div class="_e296pg">
                                               <div
-                                                class="_1mx6kqf"
+                                                class="card__media"
                                                 style="
                                                   background: var(--d-nc-lt-s);
                                                   --dls-basecard-padding-top: 66.6667%;
                                                 "
                                               >
-                                                <div class="_1szwzht">
+                                                <div class="card__media-container">
                                                   <span
                                                     ><div class="_ttw0d">
                                                       <a
@@ -2538,13 +2538,13 @@
                                           >
                                             <div class="_e296pg">
                                               <div
-                                                class="_1mx6kqf"
+                                                class="card__media"
                                                 style="
                                                   background: var(--d-nc-lt-s);
                                                   --dls-basecard-padding-top: 66.6667%;
                                                 "
                                               >
-                                                <div class="_1szwzht">
+                                                <div class="card__media-container">
                                                   <span
                                                     ><div class="_ttw0d">
                                                       <a
@@ -3214,13 +3214,13 @@
                                           >
                                             <div class="_e296pg">
                                               <div
-                                                class="_1mx6kqf"
+                                                class="card__media"
                                                 style="
                                                   background: var(--d-nc-lt-s);
                                                   --dls-basecard-padding-top: 66.6667%;
                                                 "
                                               >
-                                                <div class="_1szwzht">
+                                                <div class="card__media-container">
                                                   <span
                                                     ><div class="_ttw0d">
                                                       <a
